@@ -360,6 +360,7 @@ setMethod(f="plot",
                               adorn=NULL,
                               drawTimeRange=getOption("oceDrawTimeRange"),
                               useSmoothScatter,
+                              missingColor="gray",
                               mgp=getOption("oceMgp"),
                               mar=c(mgp[1]+1.5,mgp[1]+1.5,1.5,1.5),
                               mai.palette=c(0, 1/8, 0, 3/8),
@@ -625,6 +626,7 @@ setMethod(f="plot",
                                      zlab=zlab,
                                      drawTimeRange=drawTimeRange,
                                      drawContours=FALSE,
+                                     missingColor=missingColor,
                                      adorn=adorn[w],
                                      mgp=mgp,
                                      mar=mar,
@@ -643,6 +645,7 @@ setMethod(f="plot",
                                      zlab=zlab,
                                      drawTimeRange=drawTimeRange,
                                      drawContours=FALSE,
+                                     missingColor=missingColor,
                                      adorn=adorn[w],
                                      mgp=mgp,
                                      mar=mar,
