@@ -1,5 +1,6 @@
 0.8-7
-- imagep() and drawPalette() get arguments 'labels' and 'at'
+- imagep(): new argument 'missingColor'
+- imagep() and drawPalette(): new argument 'labels' and 'at'
 
 0.8-6
 - imagep(): permit POSIXt type for zlim
